--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ dmypy.json
 
 /tests/ntfsdump/cache/*
 !/tests/ntfsdump/cache/.gitkeep
+
+# nuitka
+NtfsDumpView.build/
+NtfsDumpView.dist/
+NtfsDumpView.onefile-build/
