--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: build for windows
         if: matrix.os == 'windows-latest'
         run: |
-          poetry run pip install nuitka
+          poetry run pip install nuitka zstandard
           poetry run python -m nuitka --onefile --follow-imports -o dist/ntfsdump.exe src/ntfsdump/views/NtfsDumpView.py
 
       - name: verify for windows
@@ -59,7 +59,7 @@ jobs:
       - name: build for ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: |
-          poetry run pip install nuitka
+          poetry run pip install nuitka zstandard
           poetry run python -m nuitka --onefile --follow-imports -o dist/ntfsdump src/ntfsdump/views/NtfsDumpView.py
 
       - name: verify for ubuntu
