fix: add appimagetool to dependencies

--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -60,6 +60,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           poetry run pip install nuitka zstandard
+          wget "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
+          chmod a+x appimagetool-x86_64.AppImage
+          mv appimagetool-x86_64.AppImage /home/runner/.local/share/Nuitka/appimagetool-x86_64.AppImage/x86_64/13/appimagetool'
           poetry run python -m nuitka --onefile --follow-imports -o dist/ntfsdump src/ntfsdump/views/NtfsDumpView.py
 
       - name: verify for ubuntu
