--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, ubuntu-latest]
         python-version: ['3.9']
 
     steps:
@@ -47,14 +47,26 @@ jobs:
       - name: build for windows
         if: matrix.os == 'windows-latest'
         run: |
-          poetry run pip install nuitka zstandard
-          poetry run python -m nuitka --onefile --follow-imports -o dist/ntfsdump.exe src/ntfsdump/views/NtfsDumpView.py
+          poetry run pip install nuitka
+          poetry run python -m nuitka --onefile --follow-imports --assume-yes-for-downloads -o dist/ntfsdump.exe src/ntfsdump/views/NtfsDumpView.py
 
       - name: verify for windows
         if: matrix.os == 'windows-latest'
         run: |
           dist/ntfsdump.exe -h
           dist/ntfsdump.exe -v
+
+      - name: build for ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          poetry run pip install nuitka
+          poetry run python -m nuitka --onefile --follow-imports --assume-yes-for-downloads -o dist/ntfsdump src/ntfsdump/views/NtfsDumpView.py
+
+      - name: verify for ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          dist/ntfsdump -h
+          dist/ntfsdump -v
 
       # - name: upload
       #   uses: softprops/action-gh-release@v1
